--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "watch:server": "nodemon ./src/app.ts -watch ./src/**/*",
     "lint": "eslint --cache --ext .js,.ts src",
     "lint:fix": "npm run lint -- --fix",
-
     "typeorm": "node -r ts-node/register ./node_modules/typeorm/cli.js",
     "migration:generate": "typeorm migration:create -n",
     "migration:run": "npm run typeorm migration:run",
@@ -18,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
@@ -25,6 +25,7 @@
     "typescript": "^4.5.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.19",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
