--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/joi": "^17.2.3",
     "bcrypt": "^5.0.1",
+    "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "16.0.0",
     "express": "^4.17.3",
