--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ PORT = 5500
 
 SECRET_ACCESS_KEY = secret_access_key
 SECRET_REFRESH_KEY = secret_refresh_key
+
+
+
+NO_REPLAY_EMAIL=saturchak71@gmail.com
+NO_REPLAY_EMAIL_PASSWORD=Saturchak2151
