--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT = 5500
 
 SECRET_ACCESS_KEY = secret_access_key
 SECRET_REFRESH_KEY = secret_refresh_key
-
+SECRET_ACTION_KEY = secret_action_key
 
 
 NO_REPLAY_EMAIL=saturchak71@gmail.com
