added aws s3 service

--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@ SECRET_ACTION_KEY = secret_action_key
 
 NO_REPLAY_EMAIL=saturchak71@gmail.com
 NO_REPLAY_EMAIL_PASSWORD=Saturchak2151
+
+
+
+S3_NAME = my-frs-bucket
+S3_REGION=us-east-1
+S3_ACCESS_KEY=AKIATS6YNMEPQMXA3UP5
+S3_SECRET_KEY=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
