--- a/package.json
+++ b/package.json
@@ -18,30 +18,40 @@
   "license": "ISC",
   "dependencies": {
     "@types/joi": "^17.2.3",
+    "aws-sdk": "^2.1111.0",
     "bcrypt": "^5.0.1",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.0",
     "dotenv": "16.0.0",
     "email-templates": "^9.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.7.3",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.44",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/email-templates": "^8.0.4",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.19",
+    "@types/node-cron": "^3.0.1",
     "@types/nodemailer": "^6.4.4",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "copyfiles": "^2.4.1",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -49,7 +59,6 @@
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
     "ts-node": "^10.5.0",
-    "tsc-watch": "^4.6.0",
-    "@types/email-templates": "^8.0.4"
+    "tsc-watch": "^4.6.0"
   }
 }
