--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "express-fileupload": "^1.3.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.11",
     "mysql2": "^2.3.3",
     "node-cron": "^3.0.0",
     "nodemailer": "^6.7.3",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.4.1",
+    "soket.io": "^0.0.1-security",
     "typeorm": "^0.2.44",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2"
@@ -49,10 +52,12 @@
     "@types/node": "^17.0.19",
     "@types/node-cron": "^3.0.1",
     "@types/nodemailer": "^6.4.4",
+    "@types/socket.io": "^3.0.2",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "copyfiles": "^2.4.1",
+    "@types/mongoose": "^5.11.97",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
